fix: grid row too big old iOS

--- a/src/components/Stats/Stats.scss
+++ b/src/components/Stats/Stats.scss
@@ -19,6 +19,8 @@
 				height: 1px;
 				width: 100%;
 
+				margin: -6px 0 -6px 0;
+
 				background-color: var(--color-text-secondary);
 			}
 
@@ -41,6 +43,10 @@
 			display: grid;
 			align-items: center;
 			justify-items: center;
+		}
+
+		.stats-grid {
+			grid-template-rows: 60px;
 		}
 
 		.stats-row {
